Only call NOTIMPLEMENTED() for unknown event types, not ignored ones.

Bug: 866988
Change-Id: I91084c1f34049d1b4aafdc2f1095ac30efe45fea
Reviewed-on: https://chromium-review.googlesource.com/1148702
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577973}
Former-commit-id: 19d339e6db10af4e46d2f956fb7877eba0e9c4b7